--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Ubuntu", sans-serif;
+}
+a,
+li,
+ul,
+ol {
+  list-style: none;
+  text-decoration: none;
+  color: inherit;
+}
 .App {
   text-align: center;
 }
